[gd_scene load_steps=9 format=3 uid="uid://cv60alg7xlja2"]

[ext_resource type="Texture2D" uid="uid://dllc7f2y4ta0t" path="res://art/playerGrey_up1.png" id="1_hqtel"]
[ext_resource type="Script" uid="uid://doer5noyfx2ot" path="res://player.gd" id="1_sweqy"]
[ext_resource type="Texture2D" uid="uid://b3vowvo1mxh6" path="res://art/playerGrey_up2.png" id="2_sweqy"]
[ext_resource type="Texture2D" uid="uid://d0v3s0vybgj22" path="res://art/playerGrey_walk1.png" id="3_2hs0m"]
[ext_resource type="Texture2D" uid="uid://ce3equcewkpy6" path="res://art/playerGrey_walk2.png" id="4_1jxqw"]
[ext_resource type="AudioStream" uid="uid://dqnyn2vaagn06" path="res://art/hit.mp3" id="6_2hs0m"]

[sub_resource type="SpriteFrames" id="SpriteFrames_dw050"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_hqtel")
}, {
"duration": 1.0,
"texture": ExtResource("2_sweqy")
}],
"loop": true,
"name": &"Up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_2hs0m")
}, {
"duration": 1.0,
"texture": ExtResource("4_1jxqw")
}],
"loop": true,
"name": &"Walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_b26j0"]
radius = 27.0
height = 68.0

[node name="Player" type="Area2D"]
visible = false
script = ExtResource("1_sweqy")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_dw050")
animation = &"Up"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_b26j0")
one_way_collision_margin = 0.0

[node name="HitTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="HitSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_2hs0m")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="HitTimer" to="." method="_on_hit_timer_timeout"]
